# A3-S-lijun-main

./: .gitignore  .pre-commit-config.yaml  README.md  playground.ipynb  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: autograder.yaml
data/: street_suffixes.json
src/mec/: clean.py  io.py
test/: test_clean.py
