[project]
name = "mec"
version = "1.0.0"
dependencies = [
    "pytest>=8.0.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "faker>=23.2.0",
    "pytest-mock>=3.12.0",
    "pre-commit>=3.6.1",
    "ruff>=0.2.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mec"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff]
extend-include = ["*.ipynb"]
fix = true
